HEAD
	+ Adapted dumpBackupExtraData to new expected return value
2.0.19
	+ Fixed bug in EBox::Events::Model::Watcher::Log::syncRows
2.0.18
	+ Fixed bug in ConfigureLogDataTable::syncRows which incorrectly
	  marked logs module as changed
	+ Report remoteservices, when required, a change in administration
	  port
	+ Create plpgsql language on database setup to avoid migration problems
	+ Fixed Firefox 4 issue when downloading backups
	+ Show scroll when needed in stacktraces (error page)
	+ Added continueOnModuleFail mode to configuration restore
2.0.17
	+ Retry multiInsert line by line if there are encoding errors
	+ Event messages are cleaned of null characters and truncated
	  before inserting in the database when is necessary
	+ Improve message for "Free storage space" event and send an info
	  message when a given partition is not full anymore
	+ Event messages now can contain newline characters
	+ Avoid warnings trying to encode undefined utf8 strings in Redis.pm
	+ Set title with server name if the server is subscribed
	+ Fix title HTML tag in views for Models and Composites
	+ Added lastEventsReport to be queried by remoteservices module
	+ Added EBox::Types::HTML type
	+ Sliced restore mode fails correctly when schema file is missing,
	  added option to force restore without schema file
	+ Adapted to new location of partitionsFileSystems in EBox::FileSystem
2.0.16
	+ Rotate duplicity-debug.log log if exists
	+ Bug fix: Port selected during installation is correctly saved
	+ Zentyal web UI is restarted if their dependencies are upgraded
	+ Bug fix: Logs don't include unrelated information now
	+ Add total in disk_usage report
	+ Bugfix: Events report by source now works again
	+ Do not include info messages in the events report
	+ Remove redis configuration keys incompatible with redis 2.0 (natty)
	+ Services event is triggered only after five failed checkings
	+ Do not add redundant includedir lines to /etc/sudoers