@@ -1,4 +1,5 @@
 HEAD
+	+ Do not show available community version in Dashboard with QA updates
 	+ Adapted dumpBackupExtraData to new expected return value
 2.0.19
 	+ Fixed bug in EBox::Events::Model::Watcher::Log::syncRows
